@@ -1,0 +1,16 @@
+#
+# $Id$
+#
+# This Makefile controls a build process of pam_umask module for
+# Linux-PAM. You should not modify this Makefile (unless you know
+# what you are doing!).
+#
+
+include ../../Make.Rules
+
+TITLE=pam_umask
+
+DEFS=-DDEFAULT_CONF_FILE=\"/etc/login.defs\"
+CFLAGS += $(DEFS)
+
+include ../Simple.Rules
